force-app/main/default/objects/Product2/fields/SAP_Last_Synced_At__c.field-meta.xml
<CustomField>
    <fullName>SAP_Last_Synced_At__c</fullName>
    <description>Timestamp of the last SapMaterialMasterSyncService run that touched this Product2 record. Used by dashboards to spot stale SAP-side product data and by audit reports to verify the nightly sync ran. Null = never synced from SAP.</description>
    <label>SAP Last Synced At</label>
    <type>DateTime</type>
</CustomField>