force-app/main/default/objects/Product2/fields/SAP_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Number__c</fullName>
    <description>Joins Salesforce Product2 to the corresponding material master record in SAP MM. Populated either manually (demo) or via the nightly SAP Material Master sync (production roadmap, ADR-???). Used by SapMaterialStockService to query API_MATERIAL_STOCK_SRV for real-time ATP availability.</description>
    <externalId>true</externalId>
    <label>SAP Material Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>