force-app/main/default/objects/Product2/fields/SAP_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Description__c</fullName>
    <description>SAP-side product description / short text, captured from the most recent Material Master sync (ADR-026). Useful as a cross-check that the SF Product2.Name matches what SAP has; if they drift the sync surface that via the Integration Health dashboard.</description>
    <label>SAP Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>